add react and update webpack config

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
         <title>zkNetworks</title>
     </head>
     <body>
-        hello world!
+        <div id="root"></div>
         <script src="./index.js"></script>
     </body>
 </html>
